# NeoTerritory-Copy-

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CodiNeo - Thesis 3 Defense.pptx  CppProperties.json  Questionnaire A & B.docx.md  README.md  VERSION  package-lock.json  package.json  start.ps1  start.sh
Codebase/Microservice/: CMakeLists.txt  CppProperties.json  README.md  main.cpp  setup.sh
Codebase/Microservice/Modules/: README.md
Codebase/Microservice/Modules/Header/: README.md
Codebase/Microservice/Modules/Header/Analysis/Input/: cli_arguments.hpp  source_reader.hpp
Codebase/Microservice/Modules/Header/Analysis/Lexical/: README.md  language_tokens.hpp  lexical_structure_hooks.hpp  token_stream.hpp
Codebase/Microservice/Modules/Header/HashingMechanism/HashLinks/: hash_links.hpp
Codebase/Microservice/Modules/Header/OutputGeneration/: README.md
Codebase/Microservice/Modules/Header/OutputGeneration/Contracts/: algorithm_pipeline.hpp  analysis_context.hpp  pipeline_state.hpp
Codebase/Microservice/Modules/Header/Trees/: README.md
Codebase/Microservice/Modules/Source/: README.md  core.cpp
Codebase/Microservice/Modules/Source/Analysis/: core.cpp
Codebase/Microservice/Modules/Source/Diffing/: core.cpp
Codebase/Microservice/Modules/Source/HashingMechanism/: README.md  core.cpp
Codebase/Microservice/Modules/Source/OutputGeneration/: README.md  core.cpp
Codebase/Microservice/Modules/Source/Trees/: README.md  core.cpp
Codebase/Microservice/Runtime/: README.md
Codebase/Microservice/Runtime/Back system/: README.md  syntacticBrokenAST.cpp
Codebase/Microservice/pattern_catalog/: inheritance_driven_patterns.json  lexeme_categories.json
Codebase/Microservice/pattern_catalog/_runtime/: introspect.hpp
Codebase/Microservice/pattern_catalog/behavioural/: strategy_concrete.test.template.cpp  strategy_interface.fallback_doc.json  strategy_interface.json  strategy_interface.test.template.cpp
Codebase/Microservice/pattern_catalog/behavioural/strategy_interface/: subclass.json
Codebase/Microservice/pattern_catalog/creational/: builder.fallback_doc.json  builder.json  builder.test.template.cpp  factory.fallback_doc.json  factory.json  factory.test.template.cpp  method_chaining.fallback_doc.json  method_chaining.json  method_chaining.test.template.cpp  singleton.fallback_doc.json  singleton.json  singleton.test.template.cpp
Codebase/Microservice/pattern_catalog/idiom/: pimpl.fallback_doc.json  pimpl.json
Codebase/Microservice/pattern_catalog/structural/: adapter.fallback_doc.json  adapter.json  adapter.test.template.cpp  decorator.fallback_doc.json  decorator.json  decorator.test.template.cpp  proxy.fallback_doc.json  proxy.json  proxy.test.template.cpp  virtual_proxy.json
Codebase/Microservice/samples/adapter/: payment_gateway_adapter.cpp
Codebase/Microservice/samples/builder/: http_request_builder.cpp
Codebase/Microservice/samples/decorator/: coffee_decorator.cpp
Codebase/Microservice/samples/factory/: shape_factory.cpp
Codebase/Microservice/samples/integration/: all_patterns.cpp
Codebase/Microservice/samples/method_chaining/: query_predicate.cpp
Codebase/Microservice/samples/mixed/: mixed_classes.cpp
Codebase/Microservice/samples/negative/: plain_class_no_pattern.cpp  plain_widget.cpp
Codebase/Microservice/samples/pimpl/: pimpl_basic.cpp
Codebase/Microservice/samples/singleton/: config_registry.cpp
Codebase/Microservice/samples/strategy/: strategy_basic.cpp  strategy_with_pimpl.cpp
Codebase/Microservice/samples/usages/: usages_adapter_trace.cpp  usages_basic.cpp  usages_smart_pointers.cpp
Codebase/Microservice/samples/wrapping/: logging_proxy.cpp
docs/: DEPLOY.md  (+2 more)
(+1218 files in other folders)
